# pyralph

./: Makefile  RALPH_TASK.md  README.md  main.py  pyproject.toml
.ralph/: progress.md  test_marker.txt
.ralph/completed/: RALPH_TASK_20260116_220522.md  RALPH_TASK_20260117_144718.md  RALPH_TASK_20260117_152814.md  RALPH_TASK_20260117_191151.md  progress_20260117_152814.md  progress_20260117_191151.md
src/ralph/: __init__.py  archive.py  cli.py  debug.py  git_utils.py  gutter.py  interview.py  interview_turns.py  loop.py  parser.py  prompts.py  signals.py  state.py  task.py  tokens.py  ui.py
src/ralph/providers/: __init__.py  base.py  claude.py  codex.py  cursor.py  gemini.py  rotation.py
tests/: __init__.py  test_cli.py  test_git_utils.py  test_gutter.py  test_question.py  test_task.py  test_tokens.py  test_verification.py
